- Added the new option 'stats_rate' in 'mail.pm' to be able to choose between
  'real' (new default) and 'per_second'.
- Added the ability to include an alert for each defined sensor in 'gensens.pm'.
- Added the ability to include an alert for each defined sensor in 'hptemp.pm'.
- Added the ability to include an alert for each defined sensor in 'ipmi.pm'.
- Fixed an undeclared global symbol "$imgfmt_lc" in 'traffacct.pm'.
- Fixed the MIME type of graphs in 'emailreports.pm' and in 'traffacct.pm' to
  honor the 'image_format' option. [#174]
- Make whole word and radio button clickable. [#185]
- Fixed in 'emailreports.pm' to name each attached graph correctly.
- Fixed the message 'Odd number of elements in hash assignment' in
  HTTPServer.pm line 58, generated by a malformed line in the 'htpasswd' file.
  Now it warns about such malformed line in the HTTP built-in log.
- Fixed to honour the change of names in the zoomed in graph of Cores. [#183]
- Fixed the title in the header of the page to match with the current 'when='
  value.


3.9.0  - 14-Oct-2016
====================
- Added a complete graph for Linux Traffic Control with the 'tc' command. [#74]
- Added a complete graph for Chrony using the 'chronyc' command.
- Added a complete graph for generic sensors (in /sys/devices). [#159]
- Added the option 'cmd' in 'libvirt.pm' in order to be able to execute a
  custom command like 'virsh -r -c qemu:///session'.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
- Added in 'libvirt.pm' the ability to support multiple disks and network
  interfaces for each virtual machine.
  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
- Added in 'du.pm' the new 'extra_args' option to be able to include extra
  arguments to the 'du' command.
  	(suggested by Pete Perfetti, pete.perfetti AT protonmail.com)
- Added the new option 'priority' to set the priority value in which Monitorix
  will run.
- Added the new option 'image_format' to specify the file format of each