@@ -200,6 +200,8 @@ secure_log_date_format = %b %e
 	</list>
 	<desc>
 	</desc>
+	<alerts>
+	</alerts>
 </lmsens>
 
 
